--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Weather App</h1>
+        <img src="https://i.pinimg.com/originals/06/c4/f7/06c4f70ec5931e2342e703e8a3f0a253.png" alt="Cloud Icon" class="cloud-icon">
+        <h1>Weather</h1>
         <form method="POST" action="/">
             <label for="city">Enter a city:</label>
             <input type="text" id="city" name="city" required>
