--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
         <form method="POST" action="/">
             <label for="city">Enter a city:</label>
             <input type="text" id="city" name="city" required>
-            <button type="submit">Get Weather</button>
+            <button type="submit">Fetch Weather</button>
         </form>
         {% if city %}
             <h2>Weather in {{ city }}</h2>
