--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
     <form method="POST" action="/">
         <div class="navbar">
             <img src="https://i.pinimg.com/originals/06/c4/f7/06c4f70ec5931e2342e703e8a3f0a253.png" alt="Cloud Icon" class="cloud-icon">
-            <input type="text" id="city" name="city" placeholder="Enter city here..." required autocomplete="off">
+            <input type="text" id="city" name="city" placeholder="Enter city here..." required pattern="[A-Za-z ]+" required>
         </div>
     </form>
     <div class="container">
